--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,7 @@
     "incremental": true,
     "allowJs": true,
     "skipLibCheck": true,
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
   },
   "include": [
     "./server/**/*",
